<resources>
    <string name="AddOrder">AddOrder</string>
    <string name="AddressOnMap">الموقع على الخريطة</string>
    <string name="CancelOrder">Cancel Order</string>
    <string name="CancelTravel">Cancel Travel</string>
    <string name="Cancel_order">Cancel order</string>
    <string name="CompanyName">CompanyName</string>
    <string name="Done">Done</string>
    <string name="DoneRecive">order successfully delivered</string>
    <string name="EmailNotValidate">Email Not Validate</string>
    <string name="EmailValid">Email not valid</string>
    <string name="EmpityComfirmPass">Please enter your Confirm Password !</string>
    <string name="EmpityNewPass">Please enter your New Password !</string>
    <string name="EmpityOldPass">Please enter your Old Password !</string>
    <string name="EndTravel">End Travel</string>
    <string name="EpityEmail">Please enter your email !</string>
    <string name="EpityMobile">Please enter your mobile number ?</string>
    <string name="EpityPassword">Please enter your password ?</string>
    <string name="Loading">Loading</string>
    <string name="NO">NO</string>
    <string name="NavMenu">القائمة</string>
    <string name="NotMatchPass">Password does not match</string>
    <string name="PilotName">PilotName</string>
    <string name="PilotOrder">Order pilot now</string>
    <string name="ReturnOrder">Return Order</string>
    <string name="SAVE_CONTINUE">SAVE AND CONTINUE</string>
    <string name="StartTravel">Start Travel</string>
    <string name="SureEndTravel">Sure to end the Order?</string>
    <string name="YES">YES</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">الحساب</string>
    <string name="accountRest">الحساب</string>
    <string name="action_settings">Settings</string>
    <string name="agree">موافق</string>
    <string name="app_name">Delivirko</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bagBill">الشنطة</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btnLogin">تسجيل دخول</string>
    <string name="buildingNo">رقم العمارة</string>
    <string name="canceled">رحلات مرفوضة</string>
    <string name="cash">نقداً</string>
    <string name="changePassword">تغيير كلمة المرور</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_location">Choose a location please ?</string>
    <string name="city">المحافظة</string>
    <string name="clientName">اسم العميل</string>
    <string name="close">اغلاق</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirmPassword">تأكيد كلمة المرور</string>
    <string name="currencyJeneh">جنيه</string>
    <string name="dailyReport">التقرير اليومي</string>
    <string name="dataUpdate">تحديث البيانات</string>
    <string name="default_web_client_id">621546375202-leq8rc2qs629tldhda5tph2ic5m9c7fj.apps.googleusercontent.com</string>
    <string name="define_roundedimageview" />
    <string name="deliveryCost">تكلفة التوصيل (جنيه مصري)</string>
    <string name="dialog_enable_3g">Enable 3G</string>
    <string name="dialog_enable_wifi">Enable WIFI</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_no_inter_message">You have not active internet connection.</string>
    <string name="dialog_no_internet">No Internet</string>
    <string name="discountAmount">خصم بقيمة</string>
    <string name="done">Done</string>
    <string name="ePay">دفع إلكتروني</string>
    <string name="ePayServices">خدمات الدفع الالكترونية</string>
    <string name="electronic">electronic</string>
    <string name="endOrderMessage">Are you exactly out of order? This means that you have delivered the order Successfully to the customer and complete the order</string>
    <string name="ensure">الضمان</string>
    <string name="errorFeaild">please enter the empty Field !</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://deliverco.firebaseio.com</string>
    <string name="flatNo">رقم الشقة</string>
    <string name="floorNo">رقم الدور</string>
    <string name="followOrders">تتبع الطلبات</string>
    <string name="freeOrders">الطلبات المجانية</string>
    <string name="gcm_defaultSenderId">621546375202</string>
    <string name="google_api_key">AIzaSyAnh231qB5WHfTTXpqUsSWEkxx2qt-2vMU</string>
    <string name="google_app_id">1:621546375202:android:393e4cf094314ba8</string>
    <string name="google_crash_reporting_api_key">AIzaSyAnh231qB5WHfTTXpqUsSWEkxx2qt-2vMU</string>
    <string name="google_maps_key">AIzaSyCmxwSqBoqM9y73xZsSVQU2hZBJTTLJ718</string>
    <string name="google_storage_bucket">deliverco.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="lib_name">Alerter</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="logo_out">Are you sure to Log out ?</string>
    <string name="main">الرئيسية</string>
    <string name="mobile">الموبايل</string>
    <string name="myOrders">طلباتي</string>
    <string name="officeFee">عمولة المكتب</string>
    <string name="orderValue">قيمة الطلب</string>
    <string name="ordersIncome">الدخل من الطلبات</string>
    <string name="restorePassword">استرداد كلمة المرور</string>
    <string name="reward">المكافئة</string>
    <string name="rulesConditions">الشروط والأحكام</string>
    <string name="settings">الإعدادات</string>
    <string name="signOut">تسجيل الخروج</string>
    <string name="specialMark">علامة مميزة</string>
    <string name="street">الشارع</string>
    <string name="supply">المساعدة والدعم</string>
    <string name="totalMoney">المبلغ المالي المحصل</string>
    <string name="tvAcceptance">نسبة القبول</string>
    <string name="tvCompleteOrders">نسبة الطلبات المكتملة</string>
    <string name="tvForgetPassHint">يرجى كتابة البريد الالكتروني لاسترداد كلمة المرور</string>
    <string name="tvNoOfOrders">عدد الطلبات</string>
    <string name="tvPointNo">عدد النقاط</string>
    <string name="tvRateBill">التقييم</string>
    <string name="txtEmail">البريد الالكتروني</string>
    <string name="workHours">ساعات العمل</string>
    <string name="yourWeekBalance">رصيدك لهذا الأسبوع</string>
</resources>