<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/layoutForgetDialog" android:background="@drawable/dialog_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/tvDialogTitle" android:textStyle="bold" android:layout_gravity="center" android:id="@id/tvForget1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/restorePassword" />
        <TextView android:textSize="10.0sp" android:textColor="@color/GreyDialogMsg" android:id="@id/tvForget2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:text="@string/tvForgetPassHint" />
        <EditText android:id="@id/txtForget1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_marginTop="11.0dip" android:hint="@string/txtEmail" android:inputType="textEmailAddress" android:layout_marginStart="0.0dip" android:layout_marginEnd="0.0dip" style="@style/TxtStyleWhiteBg" />
        <Button android:textSize="14.0sp" android:id="@id/rest_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/btnLogin" style="@style/ButtonStyleActivity" />
    </LinearLayout>
    <TextView android:gravity="center_vertical" android:id="@id/tvCloseFDialog" android:text="@string/close" android:layout_below="@id/layoutForgetDialog" android:layout_centerHorizontal="true" style="@style/TvCloseDialog" />
</RelativeLayout>