<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/tvMenu" android:layout_marginTop="17.0dip" android:text="@string/NavMenu" android:layout_centerHorizontal="true" style="@style/TitleMenuStyle" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/layoutPilotName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:layout_below="@id/tvMenu" android:layout_marginStart="15.0dip" android:layout_alignParentStart="true">
        <com.makeramen.roundedimageview.RoundedImageView android:id="@id/imgRestaurantLogo" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/brand_logo" android:scaleType="centerCrop" android:layout_centerHorizontal="true" app:riv_mutate_background="true" app:riv_oval="true" />
        <TextView android:id="@id/tvMenuRestName" android:text="اسم المطعم" android:layout_marginStart="@dimen/marginStartTitleMenu" style="@style/TitleMenuStyle" />
    </LinearLayout>
    <ScrollView android:id="@id/sv_right_menu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fillViewport="true" android:layout_above="@id/layoutSignOutRest" android:layout_below="@id/layoutPilotName" android:layout_centerVertical="true">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/layout_right_menu" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:id="@id/restNavMain" style="@style/ItemLayoutMenuStyle">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_nav_home" />
                <TextView android:text="@string/main" style="@style/ItemMenuTextStyle" />
            </LinearLayout>
            <LinearLayout android:id="@id/restNavMyOrders" style="@style/ItemLayoutMenuStyle">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_nav_orders" />
                <TextView android:text="@string/myOrders" style="@style/ItemMenuTextStyle" />
            </LinearLayout>
            <LinearLayout android:id="@id/restNavFollowOrders" style="@style/ItemLayoutMenuStyle">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_nav_location" android:tint="#ffffffff" />
                <TextView android:text="@string/followOrders" style="@style/ItemMenuTextStyle" />
            </LinearLayout>
            <LinearLayout android:id="@id/restNavAccount" style="@style/ItemLayoutMenuStyle">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_nav_bill" />
                <TextView android:text="@string/accountRest" style="@style/ItemMenuTextStyle" />
            </LinearLayout>
            <LinearLayout android:id="@id/restNavFreeOrders" style="@style/ItemLayoutMenuStyle">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_nav_free_orders" />
                <TextView android:text="@string/freeOrders" style="@style/ItemMenuTextStyle" />
            </LinearLayout>
            <ImageView android:background="@drawable/dashed_line_menu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" android:layout_marginStart="15.0dip" />
            <LinearLayout android:id="@id/restNavSettings" style="@style/ItemLayoutMenuStyle">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_nav_settings" />
                <TextView android:text="@string/settings" style="@style/ItemMenuTextStyle" />
            </LinearLayout>
            <LinearLayout android:id="@id/restNavSupply" style="@style/ItemLayoutMenuStyle">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_nav_supply" />
                <TextView android:text="@string/supply" style="@style/ItemMenuTextStyle" />
            </LinearLayout>
            <LinearLayout android:id="@id/restNavConditions" style="@style/ItemLayoutMenuStyle">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_nav_conditions" />
                <TextView android:text="@string/rulesConditions" style="@style/ItemMenuTextStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/layoutSignOutRest" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:layout_alignParentBottom="true">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_sign_out" />
        <TextView android:id="@id/txtLogout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signOut" android:layout_marginStart="@dimen/marginStartTitleMenu" style="@style/TitleMenuStyle" />
    </LinearLayout>
</RelativeLayout>